feat: improve button placement and sizing on hire-talent page
- Move call-to-action buttons directly under collaboration text
- Increase button height to 200px for better visibility
- Remove 'or' divider between buttons for cleaner design

--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -31,7 +31,7 @@ import Layout from '../components/Layout.astro';
         <!-- Conditions Card -->
         <div class="card card-tall">
             <h3 class="title">Conditions:</h3>
-            <div class="body-text flex-1">
+            <div class="body-text">
                 <ul class="list-bulleted">
                     <li>The fee of the placement is an agreed percentage of your candidate's salary.</li>
                     <li><strong>That means:</strong> If you're not fully satisfied with any of the candidates you've interviewed and you don't decide to hire, our service is 100% free and without risk for you.</li>
@@ -40,10 +40,9 @@ import Layout from '../components/Layout.astro';
                 That's why we selectively choose our partners. Unfortunately, we cannot work with every company.
                 Let's find out if our collaboration makes sense.
             </div>
-            <div class="btn-group">
-                <a href="#callback" class="btn btn-flex">Receive a call back</a>
-                <span class="divider">or</span>
-                <a href="#schedule" class="btn btn-flex">Schedule your meeting</a>
+            <div class="btn-group" style="margin-top: 20px; margin-bottom: 20px;">
+                <a href="#callback" class="btn btn-flex" style="height: 200px; min-height: 200px;">Receive a call back</a>
+                <a href="#schedule" class="btn btn-flex" style="height: 200px; min-height: 200px;">Schedule your meeting</a>
             </div>
         </div>
 
