test new button claude 4

--- a/src/pages/hire-talent.astro
+++ b/src/pages/hire-talent.astro
@@ -41,8 +41,8 @@ import Layout from '../components/Layout.astro';
                 Let's find out if our collaboration makes sense.
             </div>
             <div class="btn-group" style="margin-top: 20px; margin-bottom: 20px;">
-                <a href="#callback" class="btn btn-flex" style="height: 200px; min-height: 200px;">Receive a call back</a>
-                <a href="#schedule" class="btn btn-flex" style="height: 200px; min-height: 200px;">Schedule your meeting</a>
+                <a href="#callback" class="btn-cta btn-cta-pulse">Receive a call back</a>
+                <a href="#schedule" class="btn-cta-secondary">Schedule your meeting</a>
             </div>
         </div>
 
